# sdl2-android-example

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: build-sdl2-android.yml
SDL2/: CMakeLists.txt  build.gradle
SDL2/src/core/android/: SDL_android.c
SDL2/src/main/android/: SDL_android_main.c
SDL2_image/: CMakeLists.txt  build.gradle
SDL2_jpeg/: build.gradle
SDL2_mixer/: build.gradle
SDL2_png/: CMakeLists.txt  build.gradle
SDL2_ttf/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/rocks/georgik/sdlapp/: MainActivity.java  SDLActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
freetype/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
main/: CMakeLists.txt  build.gradle
main/src/: main.cpp
png/: build.gradle
zip/: build.gradle
